Fixed horizontal scroll

--- a/css/istyles.css
+++ b/css/istyles.css
@@ -1,3 +1,7 @@
+body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
 
 .body{
     margin: 0;
@@ -56,6 +60,8 @@ nav li a:hover{
     columns: 250px 3;
     margin-left: 75px;
     margin-right: 75px;
+    border: 6px solid green;
+    height: 420px;
 }
 
 u{
