--- a/css/wstyle.css
+++ b/css/wstyle.css
@@ -1,5 +1,6 @@
-body{
-overflow-x: hidden;
+body {
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 h1{
